--- a/src/Components/Feed/Feed.css
+++ b/src/Components/Feed/Feed.css
@@ -1,8 +1,8 @@
 .feed {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    column-gap: 16px;
-    row-gap: 30px;
+    grid-column-gap: 16px;
+    grid-row-gap: 30px;
     margin-top: 15px;
 }
 
